--- a/model_data/yolov4_start/yolov4.cfg
+++ b/model_data/yolov4_start/yolov4.cfg
@@ -1,26 +1,25 @@
 [net]
-# Testing
-#batch=1
-#subdivisions=1
-# Training
 batch=64
-subdivisions=16
-width=960
-height=544
+subdivisions=8
+# Training
+#width=512
+#height=512
+width=608
+height=608
 channels=3
 momentum=0.949
 decay=0.0005
-angle=45
+angle=0
 saturation = 1.5
 exposure = 1.5
 hue=.1
 
-learning_rate=0.00261
+learning_rate=0.0013
 burn_in=1000
-max_batches = 14000
+max_batches = 500500
 policy=steps
-steps=11000,12000,13000
-scales=.5,.1,.1
+steps=400000,450000
+scales=.1,.1
 
 #cutmix=1
 #mosaic=1
@@ -959,14 +958,14 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=39
+filters=255
 activation=linear
 
 
 [yolo]
 mask = 0,1,2
 anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
-classes=8
+classes=80
 num=9
 jitter=.3
 ignore_thresh = .7
@@ -978,6 +977,7 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
+max_delta=5
 
 
 [route]
@@ -1046,14 +1046,14 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=39
+filters=255
 activation=linear
 
 
 [yolo]
 mask = 3,4,5
 anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
-classes=8
+classes=80
 num=9
 jitter=.3
 ignore_thresh = .7
@@ -1065,6 +1065,7 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
+max_delta=5
 
 
 [route]
@@ -1133,14 +1134,14 @@ activation=leaky
 size=1
 stride=1
 pad=1
-filters=39
+filters=255
 activation=linear
 
 
 [yolo]
 mask = 6,7,8
 anchors = 12, 16, 19, 36, 40, 28, 36, 75, 76, 55, 72, 146, 142, 110, 192, 243, 459, 401
-classes=8
+classes=80
 num=9
 jitter=.3
 ignore_thresh = .7
@@ -1153,4 +1154,4 @@ iou_normalizer=0.07
 iou_loss=ciou
 nms_kind=greedynms
 beta_nms=0.6
-
+max_delta=5
