--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Keras==2.2.4
-tensorflow-gpu==1.10.0
+tensorflow-gpu==1.15.0
 opencv-python==3.4.4.19
 scikit-learn==0.21.2
 scipy==1.1.0
 Pillow==7.1.2
-torch==0.3.1
-torchvision==0.2.0
 tqdm==4.46.0
+matplotlib
+imutils
